<resources>
    <string name="app_name">FTS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Screen Title-->
    <string name="title_login">Login</string>
    <string name="title_home">Welcome to FTS</string>
    <string name="title_details">Details</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="scan_qr_or_barcode">Scan QR code/Barcode</string>
    <string name="response">Response : </string>
    <string name="submit">Submit</string>
    <string name="error_camera_permission">Please allow Camera permission</string>
    <string name="reset">Reset</string>
    <string name="tag_code_lbl">Tag Code :</string>
    <string name="bar_code_lbl">Barcode :</string>
    <string name="file_name_lbl">File Name :</string>
    <string name="dept_lbl">Dept :</string>
    <string name="room_no_lbl">Room / Table No :</string>
    <string name="file_status_lbl">File Status :</string>
    <string name="due_date_lbl">Due Date :</string>
    <string name="remarks_lbl">Remarks :</string>
    <string name="update">Update</string>
    <string name="action_lbl">Action Required :</string>
    <string name="title_report">Report</string>
    <string name="title_update_details">Update Details</string>

</resources>
