<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_or_barcode" />

    <LinearLayout
        android:id="@+id/llResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView android:id="@+id/tvQr_BarcodeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/tvResponseLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvResponseValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>


</LinearLayout>
