<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_field_height"
                    android:layout_marginTop="@dimen/space_8"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/tag_code_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <app.com.Ui.CustomVIew.TextViewLight
                        android:id="@+id/tvTagCodeValue"
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:text="dssdsdsd"
                        android:textColor="@color/color_dark_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_field_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/bar_code_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <app.com.Ui.CustomVIew.TextViewLight
                        android:id="@+id/tvBarcodeValue"
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:text="dssdsdsd"
                        android:textColor="@color/color_dark_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_field_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/file_name_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <!--<app.com.Ui.CustomVIew.TextViewLight
                        android:id="@+id/tvFileNameValue"
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1"
                        android:text="dssdsdsd"
                        android:textColor="@color/color_dark_gray" />-->
                    <app.com.Ui.CustomVIew.EditTextLight
                        android:id="@+id/etFileNameValue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:background="@drawable/bg_white_round"
                        android:inputType="text"
                        android:maxLength="100"
                        android:paddingLeft="@dimen/space_16"
                        android:paddingRight="@dimen/space_16"
                        android:singleLine="true"
                        android:textColor="@color/color_dark_gray"
                        android:textSize="@dimen/normal_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_field_height"
                    android:layout_marginTop="@dimen/space_8"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/dept_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <!--<app.com.Ui.CustomVIew.TextViewLight
                        android:id="@+id/tvDeptValue"
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:text="dssdsdsd"
                        android:textColor="@color/color_dark_gray" />-->

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:background="@drawable/bg_white_round">

                        <Spinner
                            android:id="@+id/spDeptValue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:padding="0dp"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                            app:theme="@style/ThemeOverlay.AppCompat.Light" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_field_height"
                    android:layout_marginTop="@dimen/space_8"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/room_no_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <app.com.Ui.CustomVIew.EditTextLight
                        android:id="@+id/etRoomNoValue"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:background="@drawable/bg_white_round"
                        android:inputType="text"
                        android:maxLength="30"
                        android:paddingLeft="@dimen/space_16"
                        android:paddingRight="@dimen/space_16"
                        android:singleLine="true"
                        android:textColor="@color/color_dark_gray"
                        android:textSize="@dimen/normal_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_field_height"
                    android:layout_marginTop="@dimen/space_8"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/file_status_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <!--<app.com.Ui.CustomVIew.TextViewLight
                        android:id="@+id/tvFileStatusValue"
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:text="dssdsdsd"
                        android:textColor="@color/color_dark_gray" />-->

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:background="@drawable/bg_white_round">

                        <Spinner
                            android:id="@+id/spFileStatusValue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:padding="0dp"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                            app:theme="@style/ThemeOverlay.AppCompat.Light" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_field_height"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/due_date_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <app.com.Ui.CustomVIew.TextViewLight
                        android:id="@+id/tvDueDateValue"
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:text="dssdsdsd"
                        android:textColor="@color/color_dark_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/remarks_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <app.com.Ui.CustomVIew.EditTextLight
                        android:id="@+id/etRemarkValue"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:background="@drawable/bg_white_round"
                        android:gravity="top"
                        android:hint="Enter Remarks"
                        android:lines="4"
                        android:maxLength="500"
                        android:overScrollMode="always"
                        android:paddingBottom="@dimen/space_8"
                        android:paddingLeft="@dimen/space_16"
                        android:paddingRight="@dimen/space_16"
                        android:paddingTop="@dimen/space_8"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:textColor="@color/color_dark_gray"
                        android:textSize="@dimen/normal_text_size" />

                </LinearLayout>

                <LinearLayout android:id="@+id/llActionRequire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2">

                    <app.com.Ui.CustomVIew.TextViewBold
                        style="@style/normalTextStyle"
                        android:layout_width="0dp"
                        android:layout_weight="0.7"
                        android:text="@string/action_lbl"
                        android:textColor="@color/color_dark_gray"
                        android:textStyle="bold" />

                    <app.com.Ui.CustomVIew.EditTextLight
                        android:id="@+id/etActionRequire"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_marginLeft="@dimen/space_8"
                        android:layout_weight="1.3"
                        android:background="@drawable/bg_white_round"
                        android:gravity="top"
                        android:hint="Enter Action Required"
                        android:lines="4"
                        android:maxLength="500"
                        android:overScrollMode="always"
                        android:paddingBottom="@dimen/space_8"
                        android:paddingLeft="@dimen/space_16"
                        android:paddingRight="@dimen/space_16"
                        android:paddingTop="@dimen/space_8"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical"
                        android:textColor="@color/color_dark_gray"
                        android:textSize="@dimen/normal_text_size" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/space_20"
                    android:text="@string/update" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
